style.css
body {
    margin: 0;
    background-color: #f9f9f9;
}

h1 {
    font-size: 3em;
    margin: 0;
}

img {
    border-radius: 50%;
}

.container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    font-family: 'Roboto', sans-serif;
    color: #24292e;
}

@media (max-width: 800px) {
    .container {
        height: 90vh;
    }
}

.content {
    justify-content: space-between;
    margin-bottom: 100px;
}

@media (max-width: 800px) {
    .content {
        margin-bottom: 60px;
    }
}

.content__head {
    display:flex;
    justify-content: space-evenly;
}

@media (max-width: 800px) {
    .content__head {
        flex-direction: column;
    }
}

.content__head__pic {
    text-align: center;
}

@media (max-width: 800px) {
    .content__head__pic {
        padding-bottom: 30px;
    }
}

.content__head__title {
    text-align: center;
    align-self: center;
}

.content__description {
    margin-top: 60px;
    padding: 0 20px;
    font-size: 1.2em;
    letter-spacing: 1px;
    font-family: monospace;
    text-align: center;
}

@media (max-width: 800px) {
    .content__description {
        margin-top: 30px;
    }
}

.content__description span {
    display: inline-block;
}

.socials {
    display: flex;
    align-items: center;
    justify-content: center;
}

.socials__link {
    padding: 20px;
}

@media screen and (min-width: 800px)  {
    .mobile-break { display: none; }
}

